--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -50,6 +50,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
+        android:onClick="logIn"
         android:text="Sign In"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
