--- a/app/src/main/res/layout/activity_tasks_acvitiy.xml
+++ b/app/src/main/res/layout/activity_tasks_acvitiy.xml
@@ -11,6 +11,7 @@
         android:layout_width="114dp"
         android:layout_height="61dp"
         android:layout_marginTop="32dp"
+        android:onClick="goToAddTaskActivity"
         android:text="Add Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
