23/02/2022 - Daniel: Timer Stop UI

--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.TimerActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/stopTimer_Button_TimerActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="135dp"
+        android:src="@drawable/ic_stop_button"
+        tools:layout_editor_absoluteY="409dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
