--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,7 @@
     tools:context=".Controllers.SignUpActivity">
 
     <EditText
-        android:id="@+id/parentPin_EditText_SignUpActivity"
+        android:id="@+id/pinInputEditText"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_EditText_SignUpActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordInputEditText" />
 
     <Button
         android:id="@+id/signUp_Button_SignUpActivity"
@@ -28,10 +28,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/parentPin_EditText_SignUpActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/pinInputEditText" />
 
     <EditText
-        android:id="@+id/email_EditText_SignUpActivity"
+        android:id="@+id/emailInputEditText"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
@@ -41,10 +41,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_EditText_SignUpActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/nameInputEditText" />
 
     <EditText
-        android:id="@+id/name_EditText_SignUpActivity"
+        android:id="@+id/nameInputEditText"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@+id/userIcon_imageView_SignUpActivity" />
 
     <EditText
-        android:id="@+id/password_EditText_SignUpActivity"
+        android:id="@+id/passwordInputEditText"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
@@ -67,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_EditText_SignUpActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/emailInputEditText" />
 
     <ImageView
         android:id="@+id/userIcon_imageView_SignUpActivity"
@@ -80,5 +80,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/create_profile_image" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/signInMsgTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:text="Already have an account?"
+            app:layout_constraintEnd_toStartOf="@+id/signUpButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/signUpButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="goSignInActivity"
+            android:text="Sign in"
+            android:textColor="@color/teal_200"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/signInMsgTextView"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
