Aidan RewardsActivity and PetNamingActivity edits

--- a/app/src/main/res/layout/activity_tasks_acvitiy.xml
+++ b/app/src/main/res/layout/activity_tasks_acvitiy.xml
@@ -10,11 +10,10 @@
         android:id="@+id/addActivity_Button_TasksActivity"
         android:layout_width="114dp"
         android:layout_height="61dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:onClick="goToAddTaskActivity"
         android:text="Add Task"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView_tasksActivity" />
 
@@ -28,4 +27,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/petButton"
+        android:layout_width="112dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:onClick="goToRewardsActivity"
+        android:text="visit pet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView_tasksActivity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
