--- a/app/src/main/res/layout/activity_tasks_acvitiy.xml
+++ b/app/src/main/res/layout/activity_tasks_acvitiy.xml
@@ -32,10 +32,18 @@
         android:id="@+id/petButton"
         android:layout_width="112dp"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:onClick="goToRewardsActivity"
         android:text="visit pet"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView_tasksActivity" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="signOut"
+        android:text="Sign out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
