--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -50,10 +50,25 @@
         tools:layout_editor_absoluteY="123dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/back_Button_RewardsActivity"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="15dp"
+        android:onClick="backButton"
+        android:text="back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/renamePet_Button_RewardsActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="back"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:onClick="renamePetButton"
+        android:text="Rename Pet"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,8 +76,8 @@
         android:id="@+id/moneyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
         android:text="$XXX"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
